Splitted dataset into dataset for training, validation, and testing

--- a/Implementation.ipynb
+++ b/Implementation.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Implementation.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNFxv84VCOVvJ9VXhh//sZb"
+      "authorship_tag": "ABX9TyM6K9TQeP8Xvv9USmJHpabn"
     },
     "kernelspec": {
       "name": "python3",
@@ -27,7 +27,7 @@
         "except:\n",
         "    pass"
       ],
-      "execution_count": null,
+      "execution_count": 19,
       "outputs": []
     },
     {
@@ -41,7 +41,7 @@
         "import pandas as pd\n",
         "import numpy as np"
       ],
-      "execution_count": 1,
+      "execution_count": 20,
       "outputs": []
     },
     {
@@ -52,7 +52,7 @@
           "height": 204
         },
         "id": "Nl7b8_C3vdG8",
-        "outputId": "469a6eae-26b0-4cdd-96ba-d89e0ff46c0b"
+        "outputId": "da79617c-dc2f-4886-844b-81c5f876c1ad"
       },
       "source": [
         "#DATASET SOURCE FROM https://github.com/dbrehmer/Knowself/blob/master/data/mypersonality/essays.csv\"\n",
@@ -63,7 +63,7 @@
         "\n",
         "df.head()"
       ],
-      "execution_count": 2,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -165,30 +165,18 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 2
+          "execution_count": 21
         }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "XpCdmoNPasJD"
-      },
-      "source": [
-        "data = df['TTEXT']\n",
-        "label_ext  = df['cEXT']\n",
-        "label_neu  = df['cNEU']\n",
-        "label_agr  = df['cAGR']\n",
-        "label_con  = df['cCON']\n",
-        "label_opn  = df['cOPN']"
-      ],
-      "execution_count": 3,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "7Qqcid1g0DWR"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "KSa84m-fWk-m",
+        "outputId": "83631cbc-f7e4-4ea0-d1b8-e2ac901d7b62"
       },
       "source": [
         "def changeLabel(labels):\n",
@@ -199,13 +187,78 @@
         "      labels[index] = 1\n",
         "  return labels\n",
         "\n",
-        "label_ext = changeLabel(label_ext)\n",
-        "label_neu = changeLabel(label_neu)\n",
-        "label_agr = changeLabel(label_agr)\n",
-        "label_con = changeLabel(label_con)\n",
-        "label_opn = changeLabel(label_opn)"
+        "changeLabel(df['cEXT'])\n",
+        "changeLabel(df['cNEU'])\n",
+        "changeLabel(df['cAGR'])\n",
+        "changeLabel(df['cCON'])\n",
+        "changeLabel(df['cOPN'])"
       ],
-      "execution_count": 4,
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0       1\n",
+              "1       0\n",
+              "2       1\n",
+              "3       0\n",
+              "4       1\n",
+              "       ..\n",
+              "2462    0\n",
+              "2463    1\n",
+              "2464    0\n",
+              "2465    1\n",
+              "2466    1\n",
+              "Name: cOPN, Length: 2467, dtype: object"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 22
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "1ETSRWdeh74v"
+      },
+      "source": [
+        "train_dataset, val_dataset, test_dataset = np.split(df, [int(.8 * len(df)), int(.9 * len(df))])\n"
+      ],
+      "execution_count": 23,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "XpCdmoNPasJD"
+      },
+      "source": [
+        "train_data = train_dataset['TTEXT']\n",
+        "train_label_ext  = train_dataset['cEXT']\n",
+        "train_label_neu  = train_dataset['cNEU']\n",
+        "train_label_agr  = train_dataset['cAGR']\n",
+        "train_label_con  = train_dataset['cCON']\n",
+        "train_label_opn  = train_dataset['cOPN']\n",
+        "\n",
+        "val_data = val_dataset['TTEXT']\n",
+        "val_label_ext  = val_dataset['cEXT']\n",
+        "val_label_neu  = val_dataset['cNEU']\n",
+        "val_label_agr  = val_dataset['cAGR']\n",
+        "val_label_con  = val_dataset['cCON']\n",
+        "val_label_opn  = val_dataset['cOPN']\n",
+        "\n",
+        "test_data = test_dataset['TTEXT']\n",
+        "test_label_ext  = test_dataset['cEXT']\n",
+        "test_label_neu  = test_dataset['cNEU']\n",
+        "test_label_agr  = test_dataset['cAGR']\n",
+        "test_label_con  = test_dataset['cCON']\n",
+        "test_label_opn  = test_dataset['cOPN']"
+      ],
+      "execution_count": 24,
       "outputs": []
     },
     {
@@ -214,38 +267,26 @@
         "id": "8FmqfVpRvbVo"
       },
       "source": [
-        "dataset_ext = tf.data.Dataset.from_tensor_slices((data.values, label_ext.values.astype(dtype=np.float32)))\n",
-        "dataset_neu = tf.data.Dataset.from_tensor_slices((data.values, label_neu.values.astype(dtype=np.float32)))\n",
-        "dataset_agr = tf.data.Dataset.from_tensor_slices((data.values, label_agr.values.astype(dtype=np.float32)))\n",
-        "dataset_con = tf.data.Dataset.from_tensor_slices((data.values, label_con.values.astype(dtype=np.float32)))\n",
-        "dataset_opn = tf.data.Dataset.from_tensor_slices((data.values, label_opn.values.astype(dtype=np.float32)))"
+        "train_dataset_ext = tf.data.Dataset.from_tensor_slices((train_data.values, train_label_ext.values.astype(dtype=np.float32)))\n",
+        "train_dataset_neu = tf.data.Dataset.from_tensor_slices((train_data.values, train_label_neu.values.astype(dtype=np.float32)))\n",
+        "train_dataset_agr = tf.data.Dataset.from_tensor_slices((train_data.values, train_label_agr.values.astype(dtype=np.float32)))\n",
+        "train_dataset_con = tf.data.Dataset.from_tensor_slices((train_data.values, train_label_con.values.astype(dtype=np.float32)))\n",
+        "train_dataset_opn = tf.data.Dataset.from_tensor_slices((train_data.values, train_label_opn.values.astype(dtype=np.float32)))\n",
+        "\n",
+        "val_dataset_ext = tf.data.Dataset.from_tensor_slices((val_data.values, val_label_ext.values.astype(dtype=np.float32)))\n",
+        "val_dataset_neu = tf.data.Dataset.from_tensor_slices((val_data.values, val_label_neu.values.astype(dtype=np.float32)))\n",
+        "val_dataset_agr = tf.data.Dataset.from_tensor_slices((val_data.values, val_label_agr.values.astype(dtype=np.float32)))\n",
+        "val_dataset_con = tf.data.Dataset.from_tensor_slices((val_data.values, val_label_con.values.astype(dtype=np.float32)))\n",
+        "val_dataset_opn = tf.data.Dataset.from_tensor_slices((val_data.values, val_label_opn.values.astype(dtype=np.float32)))\n",
+        "\n",
+        "test_dataset_ext = tf.data.Dataset.from_tensor_slices((test_data.values, test_label_ext.values.astype(dtype=np.float32)))\n",
+        "test_dataset_neu = tf.data.Dataset.from_tensor_slices((test_data.values, test_label_neu.values.astype(dtype=np.float32)))\n",
+        "test_dataset_agr = tf.data.Dataset.from_tensor_slices((test_data.values, test_label_agr.values.astype(dtype=np.float32)))\n",
+        "test_dataset_con = tf.data.Dataset.from_tensor_slices((test_data.values, test_label_con.values.astype(dtype=np.float32)))\n",
+        "test_dataset_opn = tf.data.Dataset.from_tensor_slices((test_data.values, test_label_opn.values.astype(dtype=np.float32)))"
       ],
-      "execution_count": 5,
+      "execution_count": 25,
       "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "-dGtFDez84-c",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "23eb531b-6cf9-4f60-eec8-f287f685e360"
-      },
-      "source": [
-        "for text,target in dataset_ext.take(1):\n",
-        "  print('Text : {} , Target ; {}'.format(text,target))"
-      ],
-      "execution_count": 6,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Text : b'Nah, sekarang saya baru saja bangun dari tidur siang tengah hari. Ini semacam aneh, tapi sejak saya pindah ke Texas, saya memiliki masalah berkonsentrasi pada hal-hal. Aku ingat mulai pekerjaan rumah saya di kelas 10 secepat jam berdentang 4 dan tidak berhenti sampai hal itu dilakukan. Tentu saja itu mudah, tapi aku masih melakukannya. Tapi ketika saya pindah ke sini, pekerjaan rumah mendapat sedikit lebih menantang dan ada lebih banyak pekerjaan sibuk, dan jadi saya memutuskan untuk tidak menghabiskan berjam-jam melakukannya, dan hanya mendapatkan oleh. Tapi masalahnya adalah bahwa saya selalu membayar perhatian di kelas dan hanya biasa keluar tahu barang-barang, dan sekarang aku melihat kembali, jika saya benar-benar bekerja keras dan tinggal di melacak dua tahun terakhir tanpa mendapatkan malas, saya akan jenius , tapi hei, itu semua baik. Sudah terlambat untuk memperbaiki masa lalu, tapi saya tidak benar-benar tahu bagaimana untuk tetap fokus n masa depan. Satu hal yang saya tahu adalah bahwa ketika orang mengatakan bahwa b / c mereka tinggal di kampus mereka tidak bisa berkonsentrasi, itu b. s. Bagi saya itu akan lebih mudah di sana, tapi sayangnya, aku tinggal di rumah di bawah pengawasan ketat dari orang tua saya dan sedikit sebuah omelan adik yang hanya mengomeli dan mengomeli dan mengomeli. Anda mendapatkan titik. Hal lain adalah, adalah bahwa itu hanya merepotkan harus pergi semua kembali perjalanan ke sekolah hanya untuk pergi ke perpustakaan untuk belajar. Saya perlu pindah, tapi saya tidak tahu bagaimana untuk memberitahu mereka. Jangan salah, saya melihat di mana mereka datang dari dan mengapa mereka tidak ingin aku pindah, tapi aku harus pergi dan berada di saya sendiri. Mereka terlindung saya begitu banyak dan saya tidak memiliki kekhawatiran di dunia. Satu-satunya hal yang mereka meminta saya untuk melakukan yaitu menjaga kamar saya bersih dan bantuan dengan bisnis sesekali, tapi aku bahkan tidak bisa melakukan itu. Tapi aku harus. Tapi saya punya cukup uang dari UT ke hidup di asrama atau apartemen semester berikutnya dan saya pikir saya akan mengambil keuntungan dari itu. Tapi off topik yang sekarang, saya pergi ke jalan keenam tadi malam dan memiliki ledakan. Saya belum ada di begitu lama. Sekarang aku tahu mengapa aku mencintai Austin begitu banyak. Ketika saya tinggal di VA, saya digunakan untuk pergi ke DC sepanjang waktu dan memiliki ledakan, tapi di sini, ada begitu banyak siswa berlarian di malam hari. Aku hanya ingin bersenang-senang dan saya tahu bahwa saya cukup bertanggung jawab untuk dapat bersenang-senang, tapi tetap prioritas saya lurus. Tinggal di rumah, saya tidak bisa keluar sama sekali tanpa mereka bertanya di mana? dengan siapa? Mengapa? kapan kau kembali? dan semua pertanyaan mereka. Aku hanya berharap aku bisa diperlakukan seperti orang yang bertanggung jawab untuk sekali, tapi adikku kacau yang untuk saya. Dia pergi gila kedua dia pindah ke perguruan tinggi dan kacau karir seluruh perguruan tinggi dengan berpesta terlalu banyak. Dan itulah alasan utama bahwa mereka tidak ingin saya pergi dan bersenang-senang. Tapi aku tidak kecil lagi, dan mereka perlu untuk membiarkan saya pergi dan menjelajahi dunia, tapi aku India; dengan budaya India, dengan nilai-nilai India. Mereka melawan \"bersenang-senang.\" Maksudku dalam arti bertemu orang-orang atau pacaran dengan orang atau berpesta atau sekadar bersenang-senang. Sekolah saya sulit sudah, tapi entah kenapa aku berpikir bahwa memiliki lebih banyak kebebasan akan menempatkan lebih banyak tekanan pada saya untuk berbuat lebih baik di sekolah b / c itu yang orang tua saya dan akhirnya saya harapkan dari diri saya sendiri. Nah itu sudah menyenangkan menulis, saya tidak tahu jika Anda pergi apa pun dari tulisan ini, tetapi membantu saya mendapatkan beberapa pikiran saya ke dalam urutan. Jadi saya harap Anda bersenang-senang membacanya dan keberuntungan TA.' , Target ; 0.0\n"
-          ],
-          "name": "stdout"
-        }
-      ]
     },
     {
       "cell_type": "code",
@@ -262,7 +303,7 @@
         "        tf.keras.layers.Dense(16, activation='relu'),\n",
         "        tf.keras.layers.Dense(1, activation='sigmoid')])"
       ],
-      "execution_count": 10,
+      "execution_count": 26,
       "outputs": []
     },
     {
@@ -272,10 +313,12 @@
       },
       "source": [
         "batch_size = 512\n",
-        "\n",
-        "ext_batches = dataset_ext.batch(batch_size).prefetch(1)"
+        "num_examples = tf.data.experimental.cardinality(train_dataset_ext).numpy()\n",
+        "ext_batches = train_dataset_ext.shuffle(num_examples // 4).batch(batch_size).prefetch(1)\n",
+        "val_batches = val_dataset_ext.batch(batch_size).prefetch(1)\n",
+        "test_batches = test_dataset_ext.batch(batch_size)"
       ],
-      "execution_count": 11,
+      "execution_count": 30,
       "outputs": []
     },
     {
@@ -285,7 +328,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "B4G3sVX9Tzur",
-        "outputId": "cdf13c94-c2c8-4d87-d817-f39b06c507cd"
+        "outputId": "6e435e5a-6721-404c-8bae-d71009adbe9b"
       },
       "source": [
         "model_ext.compile(optimizer='adam',\n",
@@ -293,53 +336,54 @@
         "              metrics=['accuracy'])\n",
         "\n",
         "history = model_ext.fit(ext_batches,\n",
-        "                    epochs=20)"
+        "                        validation_data=val_batches,\n",
+        "                        epochs=20)"
       ],
-      "execution_count": 12,
+      "execution_count": 31,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Epoch 1/20\n",
-            "5/5 [==============================] - 8s 1s/step - loss: 0.6937 - accuracy: 0.5036\n",
+            "4/4 [==============================] - 5s 1s/step - loss: 0.4733 - accuracy: 0.8751 - val_loss: 0.6997 - val_accuracy: 0.5425\n",
             "Epoch 2/20\n",
-            "5/5 [==============================] - 6s 1s/step - loss: 0.6755 - accuracy: 0.5867\n",
+            "4/4 [==============================] - 5s 1s/step - loss: 0.4567 - accuracy: 0.8932 - val_loss: 0.6316 - val_accuracy: 0.6518\n",
             "Epoch 3/20\n",
-            "5/5 [==============================] - 6s 1s/step - loss: 0.6590 - accuracy: 0.6947\n",
+            "4/4 [==============================] - 5s 1s/step - loss: 0.4326 - accuracy: 0.8858 - val_loss: 0.6432 - val_accuracy: 0.6437\n",
             "Epoch 4/20\n",
-            "5/5 [==============================] - 6s 1s/step - loss: 0.6426 - accuracy: 0.7279\n",
+            "4/4 [==============================] - 5s 1s/step - loss: 0.4061 - accuracy: 0.9407 - val_loss: 0.6572 - val_accuracy: 0.6194\n",
             "Epoch 5/20\n",
-            "5/5 [==============================] - 6s 1s/step - loss: 0.6253 - accuracy: 0.7523\n",
+            "4/4 [==============================] - 5s 1s/step - loss: 0.3855 - accuracy: 0.9545 - val_loss: 0.6305 - val_accuracy: 0.6478\n",
             "Epoch 6/20\n",
-            "5/5 [==============================] - 6s 1s/step - loss: 0.6053 - accuracy: 0.7747\n",
+            "4/4 [==============================] - 5s 1s/step - loss: 0.3645 - accuracy: 0.9513 - val_loss: 0.6526 - val_accuracy: 0.6316\n",
             "Epoch 7/20\n",
-            "5/5 [==============================] - 6s 1s/step - loss: 0.5827 - accuracy: 0.7817\n",
+            "4/4 [==============================] - 5s 1s/step - loss: 0.3440 - accuracy: 0.9662 - val_loss: 0.6414 - val_accuracy: 0.6437\n",
             "Epoch 8/20\n",
-            "5/5 [==============================] - 6s 1s/step - loss: 0.5563 - accuracy: 0.8078\n",
+            "4/4 [==============================] - 5s 1s/step - loss: 0.3197 - accuracy: 0.9742 - val_loss: 0.6385 - val_accuracy: 0.6478\n",
             "Epoch 9/20\n",
-            "5/5 [==============================] - 6s 1s/step - loss: 0.5270 - accuracy: 0.8350\n",
+            "4/4 [==============================] - 5s 1s/step - loss: 0.3011 - accuracy: 0.9789 - val_loss: 0.6480 - val_accuracy: 0.6275\n",
             "Epoch 10/20\n",
-            "5/5 [==============================] - 6s 1s/step - loss: 0.4946 - accuracy: 0.8632\n",
+            "4/4 [==============================] - 5s 1s/step - loss: 0.2782 - accuracy: 0.9796 - val_loss: 0.6405 - val_accuracy: 0.6599\n",
             "Epoch 11/20\n",
-            "5/5 [==============================] - 6s 1s/step - loss: 0.4605 - accuracy: 0.8861\n",
+            "4/4 [==============================] - 5s 1s/step - loss: 0.2532 - accuracy: 0.9826 - val_loss: 0.6613 - val_accuracy: 0.6275\n",
             "Epoch 12/20\n",
-            "5/5 [==============================] - 6s 1s/step - loss: 0.4246 - accuracy: 0.9157\n",
+            "4/4 [==============================] - 5s 1s/step - loss: 0.2335 - accuracy: 0.9897 - val_loss: 0.6509 - val_accuracy: 0.6518\n",
             "Epoch 13/20\n",
-            "5/5 [==============================] - 6s 1s/step - loss: 0.3883 - accuracy: 0.9329\n",
+            "4/4 [==============================] - 5s 1s/step - loss: 0.2116 - accuracy: 0.9870 - val_loss: 0.6591 - val_accuracy: 0.6478\n",
             "Epoch 14/20\n",
-            "5/5 [==============================] - 6s 1s/step - loss: 0.3522 - accuracy: 0.9441\n",
+            "4/4 [==============================] - 5s 1s/step - loss: 0.1909 - accuracy: 0.9919 - val_loss: 0.6613 - val_accuracy: 0.6478\n",
             "Epoch 15/20\n",
-            "5/5 [==============================] - 6s 1s/step - loss: 0.3168 - accuracy: 0.9538\n",
+            "4/4 [==============================] - 5s 1s/step - loss: 0.1720 - accuracy: 0.9933 - val_loss: 0.6773 - val_accuracy: 0.6235\n",
             "Epoch 16/20\n",
-            "5/5 [==============================] - 6s 1s/step - loss: 0.2827 - accuracy: 0.9601\n",
+            "4/4 [==============================] - 5s 1s/step - loss: 0.1535 - accuracy: 0.9958 - val_loss: 0.6712 - val_accuracy: 0.6397\n",
             "Epoch 17/20\n",
-            "5/5 [==============================] - 6s 1s/step - loss: 0.2502 - accuracy: 0.9668\n",
+            "4/4 [==============================] - 5s 1s/step - loss: 0.1344 - accuracy: 0.9980 - val_loss: 0.6903 - val_accuracy: 0.6235\n",
             "Epoch 18/20\n",
-            "5/5 [==============================] - 6s 1s/step - loss: 0.2205 - accuracy: 0.9748\n",
+            "4/4 [==============================] - 5s 1s/step - loss: 0.1183 - accuracy: 0.9993 - val_loss: 0.6869 - val_accuracy: 0.6275\n",
             "Epoch 19/20\n",
-            "5/5 [==============================] - 6s 1s/step - loss: 0.1946 - accuracy: 0.9828\n",
+            "4/4 [==============================] - 5s 1s/step - loss: 0.1046 - accuracy: 0.9995 - val_loss: 0.7106 - val_accuracy: 0.6194\n",
             "Epoch 20/20\n",
-            "5/5 [==============================] - 6s 1s/step - loss: 0.1708 - accuracy: 0.9882\n"
+            "4/4 [==============================] - 5s 1s/step - loss: 0.0922 - accuracy: 0.9995 - val_loss: 0.7101 - val_accuracy: 0.6235\n"
           ],
           "name": "stdout"
         }
@@ -351,7 +395,7 @@
         "id": "wjUlkXTNT6QW"
       },
       "source": [
-        ""
+        "  "
       ],
       "execution_count": null,
       "outputs": []
